--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "Rockwell Shabani",
   "license": "MIT",
   "devDependencies": {
+    "jquery": "^3.6.1",
     "nodemon": "^2.0.19",
-    "prettier": "^2.7.1",
-    "jquery": "^3.2.1"
+    "prettier": "^2.7.1"
   }
 }
